src/app.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@300;600&family=Roboto+Condensed&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;

	/* --- Variables --- */
	--fade-in-duration: 500ms;

	/* colors */
	--background: #0c1618;
	--main: #faf4d3;
	--accent0: #95cffb; /* blue */
	--accent1: #09f755; /* green */
	--accent2: #d1ac00; /* yellow */
	--accent3: #f6be9a; /* pink */
	--background2: #3d4546;

	--scheme2background: #040510;
	--scheme2main: #e5e6df;
	--scheme2accent0: #9ec0dc;
	--scheme2accent1: #6392d8;
	--scheme2accent2: #d1d3d9;
	--scheme2accent3: #737681;

	--scheme3background: #25283b;
	--scheme3main: #e5e6df;
	--scheme3accent0: #91958b;
	--scheme3accent1: #6392d8;
	--scheme3accent2: #95cffb;
	--scheme3accent3: #737681;
}

p,
h1,
h2,
h3,
h4,
h5,
h6,
button {
	@apply font-oswald;
}

.color-fade-anim {
	@apply ease-in duration-200;
}

/* Disable scrollbar */
/* Note to self: this will NOT work on the main application scrollbar */
.no-scrollbar::-webkit-scrollbar {
	display: none;
}

.no-scrollbar {
	-ms-overflow-style: none; /* IE/Edge */
	scrollbar-width: none; /* Firefox */
}

/* Animation keyframes */
@keyframes fadeInTop {
	0% {
		opacity: 0;
		transform: translateY(-20px);
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}

@keyframes fadeInLeft {
	0% {
		opacity: 0;
		transform: translateX(-20px);
	}
	100% {
		opacity: 1;
		transform: translateX(0px);
	}
}

@keyframes fadeInRight {
	0% {
		opacity: 0;
		transform: translateX(20px);
	}
	100% {
		opacity: 1;
		transform: translateX(0px);
	}
}

.fade-in-left {
	animation: fadeInLeft 1000ms;
}

.fade-in-right {
	animation: fadeInRight 1000ms;
}

.fade-in-top {
	animation: fadeInTop 500ms;
}

